--- a/packages/web/src/layouts/root.astro
+++ b/packages/web/src/layouts/root.astro
@@ -1,4 +1,6 @@
 ---
+import { ViewTransitions } from "astro:transitions";
+
 import "../styles/index.css";
 
 interface Props {
@@ -46,8 +48,38 @@ const { title, description, image = "/icon.png" } = Astro.props;
       type="font/woff2"
       crossorigin
     />
+    <ViewTransitions />
   </head>
   <body>
-    <slot />
+    <div
+      class="mx-auto flex max-w-xl flex-col md:mt-20 md:max-w-2xl md:flex-row lg:max-w-4xl"
+    >
+      <header class="bg-white px-5 py-5 md:py-0">
+        <div
+          class="flex items-center gap-x-5 md:flex-col md:items-end md:justify-normal md:gap-x-0 md:gap-y-8"
+        >
+          <a href="/" class="flex">
+            <img
+              src="/icon.png"
+              class="h-10 w-10 items-end rounded-full md:h-14 md:w-14"
+              alt="a black and white illustration of a man in a cartoonish style"
+            />
+          </a>
+          <div
+            class="flex gap-x-5 px-2 md:flex-col md:items-end md:gap-x-0 md:gap-y-3"
+          >
+            <a href="/blog" class="text-neutral-500 hover:text-neutral-700"
+              >blog</a
+            >
+            <a href="/courses" class="text-neutral-500 hover:text-neutral-700"
+              >courses</a
+            >
+          </div>
+        </div>
+      </header>
+      <main class="w-full px-5 pt-5 md:ml-5">
+        <slot />
+      </main>
+    </div>
   </body>
 </html>
