--- a/packages/web/src/layouts/root.astro
+++ b/packages/web/src/layouts/root.astro
@@ -35,6 +35,12 @@ const { title, description, image = "/icon.png" } = Astro.props;
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={new URL(image, Astro.url)} />
     <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Zac Wojcik's Blog"
+      href="/rss.xml"
+    />
+    <link
       rel="preload"
       href="/fonts/source-sans-3vf-upright.woff2"
       as="font"
