--- a/packages/web/src/layouts/root.astro
+++ b/packages/web/src/layouts/root.astro
@@ -80,6 +80,13 @@ const { title, description, image = "/icon.png" } = Astro.props;
             <a href="/courses" class="text-neutral-500 hover:text-neutral-700"
               >courses</a
             >
+            <a
+              href="/newsletter"
+              class="text-neutral-500 hover:text-neutral-700">newsletter</a
+            >
+            <a href="/contact" class="text-neutral-500 hover:text-neutral-700"
+              >contact</a
+            >
           </div>
         </div>
       </header>
