--- a/packages/web/src/pages/blog/index.astro
+++ b/packages/web/src/pages/blog/index.astro
@@ -37,7 +37,7 @@ const posts = (await getCollection("blog")).sort(
         </div>
       </div>
     ) : (
-      <div class="mt-10 flex items-center justify-center rounded-xl border border-dashed border-neutral-200 p-10 lg:max-w-lg">
+      <div class="mt-10">
         <span class="italic">aw, nothing here yet..</span>
       </div>
     )
