--- a/packages/web/src/pages/courses/index.astro
+++ b/packages/web/src/pages/courses/index.astro
@@ -13,9 +13,7 @@ import Root from "../../layouts/root.astro";
       modern developers.
     </p>
   </div>
-  <div
-    class="mt-10 flex items-center justify-center rounded-xl border border-dashed border-neutral-200 p-10 lg:max-w-lg"
-  >
+  <div class="mt-10">
     <span class="italic">aw, nothing here yet..</span>
   </div>
 </Root>
