--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -7,7 +7,7 @@ import Root from "../layouts/root.astro";
   description="My humble home on the collection of tubes we call the internet."
 >
   <div>
-    <h1 class="mb-2 text-xl font-bold text-black">hi there</h1>
+    <h1 class="mb-2 text-xl font-bold text-black">zac wojcik</h1>
     <p class="text-neutral-600">
       i'm an application security engineer helping developers write secure code,
       design secure systems, and build for resiliency.
