--- a/packages/web/src/layouts/root.astro
+++ b/packages/web/src/layouts/root.astro
@@ -2,6 +2,7 @@
 import { ViewTransitions } from "astro:transitions";
 
 import "../styles/index.css";
+import Posthog from "../components/posthog.astro";
 
 interface Props {
   title: string;
@@ -94,5 +95,6 @@ const { title, description, image = "/icon.png" } = Astro.props;
         <slot />
       </main>
     </div>
+    <Posthog />
   </body>
 </html>
