add work and links

--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -6,11 +6,69 @@ import Root from "../layouts/root.astro";
   title="Zac Wojcik"
   description="My humble home on the collection of tubes we call the internet."
 >
-  <div>
-    <h1 class="mb-2 text-xl font-bold text-black">zac wojcik</h1>
-    <p class="text-neutral-600">
-      i'm an application security engineer helping developers write secure code,
-      design secure systems, and build for resiliency.
-    </p>
+  <div class="flex flex-col space-y-6">
+    <div>
+      <h1 class="mb-2 text-xl font-bold text-black">zac wojcik</h1>
+      <p class="text-neutral-600">
+        i'm an application security engineer helping developers write secure
+        code, design secure systems, and build for resiliency.
+      </p>
+    </div>
+    <div>
+      <h2 class="mb-2 text-xl font-medium text-black">work</h2>
+      <div class="flex flex-col space-y-3">
+        <div>
+          <p class="text-neutral-600">2024 ﹣ now</p>
+          <p>security engineer ii, healthcare.</p>
+        </div>
+        <div>
+          <p class="text-neutral-600">2022 ﹣ 2024</p>
+          <p>application security engineer, pharma.</p>
+        </div>
+        <div>
+          <p class="text-neutral-600">2020 ﹣ 2022</p>
+          <p>security engineer, managed service provider.</p>
+        </div>
+        <div>
+          <p class="text-neutral-600">2018 ﹣ 2020</p>
+          <p>security analyst, managed service provider.</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h2 class="mb-2 text-xl font-medium text-black">links</h2>
+      <div class="flex flex-col space-y-3">
+        <div class="flex">
+          <a
+            target="_blank"
+            rel="noopener norefferrer"
+            href="https://github.com/cazcik"
+          >
+            <p class="text-neutral-600">github</p>
+            <p>github.com/cazcik</p>
+          </a>
+        </div>
+        <div class="flex">
+          <a
+            target="_blank"
+            rel="noopener norefferrer"
+            href="https://twitter.com/cazcik"
+          >
+            <p class="text-neutral-600">twitter</p>
+            <p>twitter.com/cazcik</p>
+          </a>
+        </div>
+        <div class="flex">
+          <a
+            target="_blank"
+            rel="noopener norefferrer"
+            href="https://www.threads.net/@cazcik"
+          >
+            <p class="text-neutral-600">threads</p>
+            <p>threads.net/@cazcik</p>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </Root>
