gently adjust title font weights

--- a/packages/web/src/pages/courses/index.astro
+++ b/packages/web/src/pages/courses/index.astro
@@ -7,7 +7,7 @@ import Root from "../../layouts/root.astro";
   description="I made some courses about security for modern developers."
 >
   <div>
-    <h1 class="mb-2 text-xl font-bold text-black">courses</h1>
+    <h1 class="mb-2 text-xl font-semibold text-black">courses</h1>
     <p class="text-neutral-600">
       i've made a few courses about real world applications of security for
       modern developers.
