--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -8,7 +8,7 @@ import Root from "../layouts/root.astro";
 >
   <div class="flex flex-col space-y-6">
     <div>
-      <h1 class="mb-2 text-xl font-bold text-black">zac wojcik</h1>
+      <h1 class="mb-2 text-xl font-semibold text-black">zac wojcik</h1>
       <p class="text-neutral-600">
         i'm an application security engineer helping developers write secure
         code, design secure systems, and build for resiliency.
@@ -40,32 +40,41 @@ import Root from "../layouts/root.astro";
       <div class="flex flex-col space-y-3">
         <div class="flex">
           <a
+            class="group"
             target="_blank"
             rel="noopener norefferrer"
             href="https://github.com/cazcik"
           >
             <p class="text-neutral-600">github</p>
-            <p>github.com/cazcik</p>
+            <p class="underline-offset-1 group-hover:underline">
+              github.com/cazcik
+            </p>
           </a>
         </div>
         <div class="flex">
           <a
+            class="group"
             target="_blank"
             rel="noopener norefferrer"
             href="https://twitter.com/cazcik"
           >
             <p class="text-neutral-600">twitter</p>
-            <p>twitter.com/cazcik</p>
+            <p class="underline-offset-1 group-hover:underline">
+              twitter.com/cazcik
+            </p>
           </a>
         </div>
         <div class="flex">
           <a
+            class="group"
             target="_blank"
             rel="noopener norefferrer"
             href="https://www.threads.net/@cazcik"
           >
             <p class="text-neutral-600">threads</p>
-            <p>threads.net/@cazcik</p>
+            <p class="underline-offset-1 group-hover:underline">
+              threads.net/@cazcik
+            </p>
           </a>
         </div>
       </div>
