--- a/packages/web/src/pages/newsletter/index.astro
+++ b/packages/web/src/pages/newsletter/index.astro
@@ -8,7 +8,7 @@ import Newsletter from "../../components/newsletter";
   description="Somewhere between a tweet and a blog post I write newsletters about things I find interesting."
 >
   <div>
-    <h1 class="mb-2 text-xl font-bold text-black">newsletter</h1>
+    <h1 class="mb-2 text-xl font-semibold text-black">newsletter</h1>
     <p class="text-neutral-600">
       somewhere between a tweet and a blog post i write newsletters about things
       i find interesting.
