--- a/packages/web/src/pages/404.astro
+++ b/packages/web/src/pages/404.astro
@@ -7,7 +7,7 @@ import Root from "../layouts/root.astro";
   description="My humble home on the collection of tubes we call the internet."
 >
   <div>
-    <h1 class="mb-2 text-xl font-bold text-black">page not found</h1>
+    <h1 class="mb-2 text-xl font-semibold text-black">page not found</h1>
     <p class="text-neutral-600">oops, that page doesn't exist.</p>
   </div>
 </Root>
