--- a/packages/web/src/pages/blog/index.astro
+++ b/packages/web/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ const posts = (await getCollection("blog")).sort(
   description="I write about things like security, technology, and business; occasionally."
 >
   <div>
-    <h1 class="mb-2 text-xl font-bold text-black">blog</h1>
+    <h1 class="mb-2 text-xl font-semibold text-black">blog</h1>
     <p class="text-neutral-600">
       sometimes i feel inclined enough to write about things like security,
       technology, and business.
@@ -23,7 +23,7 @@ const posts = (await getCollection("blog")).sort(
     posts && posts.length > 0 ? (
       <div class="mt-10">
         <div>
-          <h2 class="text-xl font-semibold text-black">posts</h2>
+          <h2 class="text-xl font-medium text-black">posts</h2>
         </div>
         <div class="mt-2">
           {posts.map((post) => (
