--- a/packages/web/src/layouts/root.astro
+++ b/packages/web/src/layouts/root.astro
@@ -59,7 +59,7 @@ const { title, description, image = "/icon.png" } = Astro.props;
   </head>
   <body>
     <div
-      class="mx-auto flex max-w-xl flex-col md:mt-20 md:max-w-2xl md:flex-row lg:max-w-4xl"
+      class="mx-auto mb-20 flex max-w-xl flex-col md:mt-20 md:max-w-2xl md:flex-row lg:max-w-4xl"
     >
       <header class="bg-white px-5 py-5 md:py-0">
         <div
