--- a/packages/web/src/pages/blog/index.astro
+++ b/packages/web/src/pages/blog/index.astro
@@ -25,11 +25,11 @@ const posts = (await getCollection("blog")).sort(
         <div>
           <h2 class="text-xl font-medium text-black">posts</h2>
         </div>
-        <div class="mt-2">
+        <div class="mt-2 flex flex-col space-y-3">
           {posts.map((post) => (
             <a href={`/blog/${post.slug}`}>
               <p class="lowercase text-black">{post.data.title}</p>
-              <p class="text-sm text-neutral-600">
+              <p class="text-neutral-600">
                 {new Date(post.data.pubDate).toLocaleDateString()}
               </p>
             </a>
