--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -19,11 +19,11 @@ import Root from "../layouts/root.astro";
       <div class="flex flex-col space-y-3">
         <div>
           <p class="text-neutral-600">2024 ﹣ now</p>
-          <p>security engineer ii, healthcare.</p>
+          <p>security engineer ii, application security, healthcare.</p>
         </div>
         <div>
           <p class="text-neutral-600">2022 ﹣ 2024</p>
-          <p>application security engineer, pharma.</p>
+          <p>application security engineer, pharmaceuticals.</p>
         </div>
         <div>
           <p class="text-neutral-600">2020 ﹣ 2022</p>
