--- a/packages/web/src/pages/blog/[...slug].astro
+++ b/packages/web/src/pages/blog/[...slug].astro
@@ -19,7 +19,7 @@ const { Content } = await post.render();
   title={`${post.data.title} ﹣ Zac Wojcik`}
   description={post.data.description}
 >
-  <div class="prose prose-neutral max-w-full lowercase">
+  <div class="prose prose-neutral max-w-full lowercase lg:prose-lg">
     <h1 class="mb-2">{post.data.title}</h1>
     <div class="not-prose">
       <p class="text-neutral-600">
