update index, adjust css slightly

--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -6,7 +6,7 @@ import Root from "../layouts/root.astro";
   title="Zac Wojcik"
   description="My humble home on the collection of tubes we call the internet."
 >
-  <div class="flex flex-col space-y-6">
+  <div class="flex flex-col space-y-7">
     <div>
       <h1 class="mb-2 text-xl font-semibold text-black">zac wojcik</h1>
       <p class="text-neutral-600">
@@ -15,7 +15,24 @@ import Root from "../layouts/root.astro";
       </p>
     </div>
     <div>
-      <h2 class="mb-2 text-xl font-medium text-black">work</h2>
+      <h2 class="mb-3 text-xl font-medium text-black">projects</h2>
+      <div class="flex flex-col space-y-3">
+        <div>
+          <p>solus</p>
+          <p class="text-neutral-600">
+            open source, product security platform.
+          </p>
+        </div>
+        <div>
+          <p>wiards</p>
+          <p class="text-neutral-600">
+            open source, security operations toolkit.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h2 class="mb-3 text-xl font-medium text-black">work</h2>
       <div class="flex flex-col space-y-3">
         <div>
           <p class="text-neutral-600">2024 ﹣ now</p>
@@ -36,7 +53,7 @@ import Root from "../layouts/root.astro";
       </div>
     </div>
     <div>
-      <h2 class="mb-2 text-xl font-medium text-black">links</h2>
+      <h2 class="mb-3 text-xl font-medium text-black">links</h2>
       <div class="flex flex-col space-y-3">
         <div class="flex">
           <a
