--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -11,7 +11,8 @@ import Root from "../layouts/root.astro";
       <h1 class="mb-2 text-xl font-semibold text-black">zac wojcik</h1>
       <p class="text-neutral-600">
         i'm an application security engineer helping developers write secure
-        code, design secure systems, and build for resiliency.
+        code, design secure systems, and build for resiliency. in my free time i
+        work on open source, play hockey, and enjoy the outdoors with my family.
       </p>
     </div>
     <div>
@@ -36,19 +37,19 @@ import Root from "../layouts/root.astro";
       <div class="flex flex-col space-y-3">
         <div>
           <p class="text-neutral-600">2024 ﹣ now</p>
-          <p>security engineer ii, application security, healthcare.</p>
+          <p>security engineer ii, application security, health insurance.</p>
         </div>
         <div>
           <p class="text-neutral-600">2022 ﹣ 2024</p>
-          <p>application security engineer, pharmaceuticals.</p>
+          <p>application security engineer, life sciences.</p>
         </div>
         <div>
           <p class="text-neutral-600">2021 ﹣ 2022</p>
-          <p>security engineer, managed service provider.</p>
+          <p>security engineer, security service provider.</p>
         </div>
         <div>
           <p class="text-neutral-600">2018 ﹣ 2021</p>
-          <p>security analyst, managed service provider.</p>
+          <p>security analyst, it service provider.</p>
         </div>
       </div>
     </div>
