--- a/packages/web/src/pages/index.astro
+++ b/packages/web/src/pages/index.astro
@@ -20,14 +20,12 @@ import Root from "../layouts/root.astro";
       <div class="flex flex-col space-y-3">
         <div>
           <p>solus</p>
-          <p class="text-neutral-600">
-            open source, product security platform.
-          </p>
+          <p class="text-neutral-600">open source security platform for all.</p>
         </div>
         <div>
-          <p>wiards</p>
+          <p>simul</p>
           <p class="text-neutral-600">
-            open source, security operations toolkit.
+            open source security platform for security teams.
           </p>
         </div>
       </div>
