--- a/src/layouts/root.astro
+++ b/src/layouts/root.astro
@@ -1,5 +1,13 @@
 ---
 import "../styles/globals.css";
+
+interface Props {
+  title: string;
+}
+
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -10,10 +18,11 @@ import "../styles/globals.css";
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@cazcik</title>
+    <title>{title}</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="canonical" href={canonicalURL} />
     <link
       rel="preload"
       href="/fonts/inter-var-upright.woff2"
