--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,18 +2,15 @@
 import Root from "../layouts/root.astro";
 ---
 
-<Root title="@cazcik">
+<Root title="404">
   <div class="flex min-h-dvh">
     <div class="m-auto w-full">
       <div class="max-w-2xl mx-auto px-6">
         <h1 class="text-black dark:text-white mb-1 font-medium md:text-lg">
-          zac wojcik
+          page not found
         </h1>
         <p class="text-neutral-500 md:text-lg">
-          i'm an application security engineer helping developers write secure
-          code, design secure systems, and build for resiliency. in my free time
-          i work on open source, play hockey, and enjoy the outdoors with my
-          family.
+          oops! the page you were looking for doesn't seem to exist.
         </p>
       </div>
     </div>
