--- a/src/layouts/root.astro
+++ b/src/layouts/root.astro
@@ -42,12 +42,10 @@ const { title } = Astro.props;
                     <nav class="flex items-center gap-x-5">
                         <a href="/blog" class="text-neutral-500 hover:text-neutral-800">blog</a>
                         <a target="_blank" rel="noopener noreferrer" href="https://github.com/cazcik" class="text-neutral-500 hover:text-neutral-800 flex items-center gap-x-1">
-                            <span>code</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-right-icon lucide-arrow-up-right size-4"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>
+                            github
                         </a>
                         <a target="_blank" rel="noopener noreferrer" href="https://x.com/cazcik" class="text-neutral-500 hover:text-neutral-800 flex items-center gap-x-1">
-                            <span>follow</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-right-icon lucide-arrow-up-right size-4"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>
+                            twitter
                         </a>
                     </nav>
                 </div>
